# python-project-83

./: .gitignore  Makefile  README.md  __init__.py  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  parser.py  requests.py  validators.py
page_analyzer/templates/: basic.html  footer.html  header.html  index.html  info.html  urls.html
page_analyzer/templates/error/: 404.html
